--- a/editable2.2.11.html
+++ b/editable2.2.11.html
@@ -66,6 +66,7 @@ $(function() {
     src="https://cdn.jsdelivr.net/gh/dobarkod/cookie-banner@1.2.2/dist/cookiebanner.min.js"
     data-height = "50px"
     data-position="bottom"
+    data-font-size="30px"
     data-message="En poursuivant votre navigation sur notre site,vous acceptez l'installation et l'utilisation de cookie sur votre poste">
 </script>
 <!-- End of Silex HEAD tag do not remove --></head>
