--- a/editable2.2.11.html
+++ b/editable2.2.11.html
@@ -67,7 +67,7 @@ $(function() {
     data-height = "50px"
     data-position="bottom"
     data-font-size="30px"
-    data-bg= #255 0 0
+    data-bg= #FF0000
     data-message="En poursuivant votre navigation sur notre site,vous acceptez l'installation et l'utilisation de cookie sur votre poste">
 </script>
 <!-- End of Silex HEAD tag do not remove --></head>
