--- a/editable2.2.11.html
+++ b/editable2.2.11.html
@@ -68,7 +68,9 @@ $(function() {
     data-position="bottom"
     data-font-size="30px"
     data-bg= #FF0000
-    data-message="En poursuivant votre navigation sur notre site,vous acceptez l'installation et l'utilisation de cookie sur votre poste">
+    data-message="JPweb-design utilise des cookies pour améliorer l'expérience client et l'utilisation de son site.
+     En cliquant sur le bouton ci-contre ou en continuant à surfer sur JPwebdesign.be, 
+     vous acceptez les conditions d’utilisation de ces cookies non functionnels. Pour en savoir plus (quels cookies, dans quels buts et gestion des cookie" >
 </script>
 <!-- End of Silex HEAD tag do not remove --></head>
 
