--- a/editable2.2.11.html
+++ b/editable2.2.11.html
@@ -131,7 +131,7 @@ $(function() {
 </ul>
 
 <style type="text/css">#id_1606992134852_179.share-buttons {list-style: none; padding: 0;}#id_1606992134852_179.share-buttons li {display: inline;}#id_1606992134852_179.share-buttons .sr-only {position: absolute; clip: rect(1px, 1px, 1px, 1px); padding: 0; border: 0; height: 1px; width: 1px; overflow: hidden;}</style>
-</div></div><div data-silex-type="text-element" class="editable-style text-element silex-id-1601459110676-6 center" data-silex-id="silex-id-1601459110676-6" style=""><div class="silex-element-content normal"><p><a href="#!page-home" linktype="LinkTypePage" class="">Home</a></p></div></div></div>
+</div></div><div data-silex-type="text-element" class="editable-style text-element silex-id-1601459110676-6 center" data-silex-id="silex-id-1601459110676-6" style=""><div class="silex-element-content normal"><p><a href="#!page-home" linktype="LinkTypePage" class="page-link-active">Home</a></p></div></div></div>
     </div><div data-silex-type="container-element" class="prevent-resizable container-element editable-style silex-id-1599603579452-2 section-element page-contact paged-element" data-silex-id="silex-id-1599603579452-2" style=""><div data-silex-type="container-element" class="editable-style silex-id-1599603579353-1 container-element silex-element-content website-width" data-silex-id="silex-id-1599603579353-1" style=""><div data-silex-type="html-element" class="editable-style html-element silex-id-1601413262101-0 page-contact paged-element" data-silex-id="silex-id-1601413262101-0" style=""><div class="silex-element-content"><p><font color="red">“J’ai lu et accepte la politique de confidentialité de ce site”</font></p>
 
  
