--- a/editable2.2.12.html
+++ b/editable2.2.12.html
@@ -92,7 +92,7 @@ $(function() {
 </script>
 
 <script src="https://unpkg.com/jarallax@1/dist/jarallax.min.js"></script>
-<link href="/css/animate.min.css" rel="stylesheet">
+<link href="./css/animate.min.css" rel="stylesheet">
 <!-- End of Silex HEAD tag do not remove --></head>
 
 <body data-silex-id="body-initial" class="body-initial all-style enable-mobile prevent-resizable prevent-selectable editable-style silex-runtime" data-silex-type="container-element" style="">
