--- a/editable-new-site.html
+++ b/editable-new-site.html
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- End of Silex HEAD tag do not remove --></head>
 
-<body data-silex-id="body-initial" class="body-initial all-style enable-mobile prevent-resizable prevent-selectable editable-style silex-runtime" data-silex-type="container-element" style="">
+<body data-silex-id="body-initial" class="body-initial all-style enable-mobile prevent-resizable prevent-selectable editable-style style-home level2 silex-runtime" data-silex-type="container-element" style="">
     
 
 
