--- a/editable-new-site.html
+++ b/editable-new-site.html
@@ -98,10 +98,7 @@ $(function() {
 
 
 <!-- END Jarallax -->
-
-
-<script type="text/javascript" id="cookiebanner"
-  src=></script><!-- End of Silex HEAD tag do not remove --></head>
+<!-- End of Silex HEAD tag do not remove --></head>
 
 <body data-silex-id="body-initial" class="body-initial all-style enable-mobile prevent-resizable prevent-selectable editable-style silex-runtime" data-silex-type="container-element" style="">
     
