--- a/editable-new-site.html
+++ b/editable-new-site.html
@@ -131,8 +131,12 @@ src="https://www.facebook.com/tr?id=384514233041018&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
 
+<!-- Jarallax -->
+
 <script src="https://unpkg.com/jarallax@1/dist/jarallax.min.js"></script>
 <link href="./css/animate.min.css" rel="stylesheet">
+
+<!-- END Jarallax -->
 <!-- End of Silex HEAD tag do not remove --></head>
 
 <body data-silex-id="body-initial" class="body-initial all-style enable-mobile prevent-resizable prevent-selectable editable-style silex-runtime" data-silex-type="container-element" style="">
