--- a/contact.html
+++ b/contact.html
@@ -79,43 +79,32 @@
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-2003L40JF0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-2003L40JF0');
-</script>
+        <script type="text/javascript">
+        tarteaucitron.user.gtagUa = 'G-2003L40JF0';
+        // tarteaucitron.user.gtagCrossdomain = ['example.com', 'example2.com'];
+        tarteaucitron.user.gtagMore = function () { /* add here your optionnal gtag() */ };
+        (tarteaucitron.job = tarteaucitron.job || []).push('gtag');
+        </script>
 
 <!-- Hotjar Tracking Code for https://www.jpwebdesign.be -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3022191,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+<script type="text/javascript">
+        (tarteaucitron.job = tarteaucitron.job || []).push('hotjar');
+        </script>
+        <script type="text/javascript">tarteaucitron.user.hotjarId = 3022191;tarteaucitron.user.HotjarSv = 6;</script>
 
 
 <!-- Facebook Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '384514233041018');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=384514233041018&amp;ev=PageView&amp;noscript=1"></noscript>
+<script type="text/javascript">
+        tarteaucitron.user.facebookpixelId = '384514233041018'; tarteaucitron.user.facebookpixelMore = function () { /* add here your optionnal facebook pixel function */ };
+        (tarteaucitron.job = tarteaucitron.job || []).push('facebookpixel');
+        </script>
 <!-- End Facebook Pixel Code -->
+
+<!-- Open Street Map -->
+<script type="text/javascript">
+        (tarteaucitron.job = tarteaucitron.job || []).push('openstreetmap');
+        </script>
 
 <!-- Jarallax -->
 
@@ -262,6 +251,6 @@ fbq('track', 'PageView');
 </form>
 
 
-</div></div><div class="editable-style text-element silex-id-1610785710954-1 center style-pied-de-page page-contact paged-element paged-element-visible"><div class="silex-element-content normal"><p>"Aucune donnée personnelle est conservée par notre site via ce formulaire " !!<br></p></div></div><div class="editable-style container-element silex-id-1627717170079-1 hide-on-mobile animate__animated animate__shakeX animate__delay-5s page-contact paged-element paged-element-visible"></div><div class="editable-style html-element silex-id-1624616943644-1 center"><div class="silex-element-content"><iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=5.350191593170167%2C50.57037315109801%2C5.373365879058838%2C50.581315494347756&amp;layer=mapnik&amp;marker=50.575844640465284%2C5.361778736114502" style="border: 1px solid black"></iframe><br><small><a href="https://www.openstreetmap.org/?mlat=50.5758&amp;mlon=5.3618#map=16/50.5758/5.3618">Afficher une carte plus grande</a></small></div></div><div class="editable-style text-element silex-id-1627571005670-0 style-texte page-contact paged-element paged-element-visible"><div class="silex-element-content normal"> <p><u>Adresse:</u></p><p>﻿JPwebDesign<u><br></u></p><p>Rue de la Baume 43</p><p>4470 St Georges / Meuse</p></div></div><div class="editable-style text-element silex-id-1624617499804-3 style-texte page-contact paged-element paged-element-visible"><div class="silex-element-content normal"> <p><u>GSM:</u></p><p>+32 477/ 59 06 75<br></p></div></div><div class="editable-style container-element silex-id-1627716963527-0 hide-on-mobile animate__animated animate__shakeX animate__delay-5s page-contact paged-element paged-element-visible"></div><div class="editable-style text-element silex-id-1637164492608-0 style-texte"><div class="silex-element-content normal"> <p><u>BCE:&nbsp;</u>0500.858.312</p></div></div></div></div></section><section class="prevent-resizable container-element editable-style silex-id-1599549366349-6 section-element"><div class="editable-style silex-id-1599549366240-5 container-element silex-element-content website-width"><div class="editable-style container-element silex-id-1606995491638-0"><div class="editable-style text-element silex-id-1601451812539-1 style-pied-de-page"><div class="silex-element-content normal"><p><a href="politiques-des-cookies.html" class="">Politiques des cookies</a></p></div></div><a class="editable-style text-element silex-id-1601452045986-2 style-pied-de-page" href="conditions-general.html"><div class="silex-element-content normal"><p>Conditions générales</p><span class="_wysihtml-temp-caret-fix" style="position: absolute; display: block; min-width: 1px; z-index: 99999;">﻿</span></div></a></div></div><div class="editable-style html-element silex-id-1630331927460-0"><div class="silex-element-content"><!-- Google Tag Manager (noscript) -->
+</div></div><div class="editable-style text-element silex-id-1610785710954-1 center style-pied-de-page page-contact paged-element paged-element-visible"><div class="silex-element-content normal"><p>"Aucune donnée personnelle est conservée par notre site via ce formulaire " !!<br></p></div></div><div class="editable-style container-element silex-id-1627717170079-1 hide-on-mobile animate__animated animate__shakeX animate__delay-5s page-contact paged-element paged-element-visible"></div><div class="editable-style html-element silex-id-1624616943644-1 center"><div class="silex-element-content"><iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=5.350191593170167%2C50.57037315109801%2C5.373365879058838%2C50.581315494347756&amp;layer=mapnik&amp;marker=50.575844640465284%2C5.361778736114502" style="border: 1px solid black"></iframe><br><small><a href="https://www.openstreetmap.org/?mlat=50.5758&amp;mlon=5.3618#map=16/50.5758/5.3618">Afficher une carte plus grande</a></small></div></div><div class="editable-style text-element silex-id-1627571005670-0 style-texte page-contact paged-element paged-element-visible"><div class="silex-element-content normal"> <p><u>Adresse:</u></p><p>﻿JPwebDesign<u><br></u></p><p>Rue de la Baume 43</p><p>4470 St Georges / Meuse</p></div></div><div class="editable-style text-element silex-id-1624617499804-3 style-texte page-contact paged-element paged-element-visible"><div class="silex-element-content normal"> <p><u>GSM:</u></p><p>+32 477/ 59 06 75<br></p></div></div><div class="editable-style container-element silex-id-1627716963527-0 hide-on-mobile animate__animated animate__shakeX animate__delay-5s page-contact paged-element paged-element-visible"></div><div class="editable-style text-element silex-id-1637164492608-0 style-texte"><div class="silex-element-content normal"> <p><u>BCE:&nbsp;</u>0500.858.312</p></div></div></div></div><div class="editable-style html-element silex-id-1655476961010-0"><div class="silex-element-content"><div class="openstreetmap" data-url="url" width="width" height="height"></div></div></div></section><section class="prevent-resizable container-element editable-style silex-id-1599549366349-6 section-element"><div class="editable-style silex-id-1599549366240-5 container-element silex-element-content website-width"><div class="editable-style container-element silex-id-1606995491638-0"><div class="editable-style text-element silex-id-1601451812539-1 style-pied-de-page"><div class="silex-element-content normal"><p><a href="politiques-des-cookies.html" class="">Politiques des cookies</a></p></div></div><a class="editable-style text-element silex-id-1601452045986-2 style-pied-de-page" href="conditions-general.html"><div class="silex-element-content normal"><p>Conditions générales</p><span class="_wysihtml-temp-caret-fix" style="position: absolute; display: block; min-width: 1px; z-index: 99999;">﻿</span></div></a></div></div><div class="editable-style html-element silex-id-1630331927460-0"><div class="silex-element-content"><!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T84ZDMG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) --></div></div></section></body></html>
