--- a/editable-tarteaucitron.html
+++ b/editable-tarteaucitron.html
@@ -570,6 +570,7 @@ divInfo.style.display = 'none';
     ✅ Réalisation de la structure et du design de tout le site<br><br>
     ✅ 3 pages maximum ( Accueil / Contact/ À propos)<br><br>
     ✅ Site 100% responsive (adapté aux nouveaux formats mobile)<br><br>
+    ✅ Inclu  2 images (Libre de droit ❗)<br><br>
     ✅ Référencement Naturel<br><br>
 </div></div></div></div><div data-silex-type="container-element" class="editable-style container-element silex-id-1673994378676-5 page-site-vitrine paged-element" data-silex-id="silex-id-1673994378676-5" style=""><div data-silex-type="html-element" class="editable-style html-element silex-id-1673993516936-2 page-site-vitrine paged-element" data-silex-id="silex-id-1673993516936-2" style=""><div class="silex-element-content"><a href="javascript: switchInfoPersoAvance();"><center>PACK Avancé ❎</center></a>
 <div id="divAvance" style="display: none;"><br>
@@ -580,7 +581,7 @@ divInfo.style.display = 'none';
     ✅ Référencement Naturel<br><br>
     ✅ Inclu images et vidéos (Libre de droit ❗)<br><br>
     ✅ Formulaire de Contact<br><br>
-    ✅ Bouton tchat el live via Whatsaap<br><br>
+    ✅ Bouton tchat en live via Whatsaap<br><br>
     ✅ Adresse mail proféssionelle ( contact@monsite.be)<br><br>
 
 </div></div></div></div><div data-silex-type="container-element" class="editable-style container-element silex-id-1674032309176-4 page-site-vitrine paged-element" data-silex-id="silex-id-1674032309176-4" style=""><div data-silex-type="html-element" class="editable-style html-element silex-id-1674032309178-5 page-site-vitrine paged-element" data-silex-id="silex-id-1674032309178-5" style=""><div class="silex-element-content"><a href="#!page-contact"><center>Je personalise mon Site ❎</center></a>
