--- a/editable-tarteaucitron.html
+++ b/editable-tarteaucitron.html
@@ -585,9 +585,10 @@ divInfo.style.display = 'none';
     ✅ Formulaire de Contact<br><br>
     ✅ Adresse mail proféssionelle ( contact@monsite.be)<br><br>
     ✅ Bouton tchat en live via Whatsapp<br><br>
+    BONUS:
 <span style="font-size:30px;">😜</span>
-    Bonus: Gestion de ton site via CMS<br>
-           Optimisation du SEO
+    Gestion de ton site via CMS<br>
+    Optimisation du SEO
 
 
 </div></div></div></div><div data-silex-type="container-element" class="editable-style container-element silex-id-1674032309176-4 page-site-vitrine paged-element" data-silex-id="silex-id-1674032309176-4" style=""><div data-silex-type="html-element" class="editable-style html-element silex-id-1674032309178-5 page-site-vitrine paged-element" data-silex-id="silex-id-1674032309178-5" style=""><div class="silex-element-content"><a href="#!page-contact" class=""><center>Je personalise mon Site ❎</center></a>
