--- a/editable-tarteaucitron.html
+++ b/editable-tarteaucitron.html
@@ -586,7 +586,7 @@ divInfo.style.display = 'none';
     ✅ Adresse mail proféssionelle ( contact@monsite.be)<br><br>
     ✅ Bouton tchat en live via Whatsapp<br><br>
     BONUS:
-<span style="font-size:30px;">😜</span>
+<span style="font-size:30px;">😜</span><br>
     Gestion de ton site via CMS<br>
     Optimisation du SEO
 
