--- a/editable-tarteaucitron.html
+++ b/editable-tarteaucitron.html
@@ -573,7 +573,7 @@ divInfo.style.display = 'none';
     ✅ Inclu  2 images (Libre de droit ❗)<br><br>
     ✅ Référencement Naturel de base<br><br>
     ✅ Formulaire de contact<br><br>
-    ✅ Adresse mail proféssionelle ( contact@monsite.be)<br><br>
+    ✅ Adresse mail professionelle ( contact@monsite.be)<br><br>
     </div></div></div></div><div data-silex-type="container-element" class="editable-style container-element silex-id-1673994378676-5 page-site-vitrine paged-element" data-silex-id="silex-id-1673994378676-5" style=""><div data-silex-type="html-element" class="editable-style html-element silex-id-1673993516936-2 page-site-vitrine paged-element shadow" data-silex-id="silex-id-1673993516936-2" style=""><div class="silex-element-content"><a href="javascript: switchInfoPersoAvance();"><center>PACK Avancé ❎</center></a>
 <div id="divAvance" style="display: none;"><br>
 <br>
@@ -583,7 +583,7 @@ divInfo.style.display = 'none';
     ✅ Inclu images et vidéos (Libre de droit ❗)<br><br>
     ✅ Référencement Naturel de base<br><br>
     ✅ Formulaire de Contact<br><br>
-    ✅ Adresse mail proféssionelle ( contact@monsite.be)<br><br>
+    ✅ Adresse mail professionelle ( contact@monsite.be)<br><br>
     ✅ Bouton tchat en live via Whatsapp<br><br>
     BONUS:
 <span style="font-size:30px;">😜</span><br><br>
