--- a/editable-tarteaucitron.html
+++ b/editable-tarteaucitron.html
@@ -381,7 +381,9 @@ function topFunction() {
 ✅ Optimisation de votre référencement sur Google Search <br>
 ✅ Création de votre Google Business <br>
 ✅ Site éco-responsable <br>
-✅ Cahier des charges précis
+✅ Cahier des charges précis <br>
+✅ 2 Forfaits de réalisations <br>
+✅ Système de crédits d'heures pour bénéficier de tarifs préférenciel !
 </span></div></div></div></div></section><section data-silex-type="container-element" class="editable-style section-element silex-id-1673537011264-0 page-home paged-element" data-silex-id="silex-id-1673537011264-0" style=""><div data-silex-type="container-element" class="editable-style container-element silex-id-1673537011265-1 silex-element-content website-width prevent-draggable" data-silex-id="silex-id-1673537011265-1" style=""><div data-silex-type="container-element" class="editable-style container-element silex-id-1673537156348-2 center" data-silex-id="silex-id-1673537156348-2" style=""></div><div data-silex-type="html-element" class="editable-style html-element silex-id-1607525398648-4 page-home paged-element silex-component-slideshow silex-use-height-not-minheight center animation-element slide-left" data-silex-id="silex-id-1607525398648-4" style=""><div class="silex-element-content"><div id="parent_1680270835315_554">
 <!-- preview -->
 <div class="prodotype-preview">
